# Penraft

./: .gitignore  CLAUDE.md  LICENSE  README.md  color-variants.html  frontmatter-styles-T1-paper.html  frontmatter-styles-T2-sepia.html  frontmatter-styles-T3-dark.html  frontmatter-styles-preview.html  index.html  package-lock.json  package.json  release-notes.md  update-flight-preview.html  update-modal-preview.html
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/scripts/: backup.sh
backend/src/: config.js  server.js
design-mocks/: _d1.html  _d2.html  _d3.html  _d4.html  _d5.html  _d6.html  update-modals.html
design-mockups/: _brief.md  compare-5cd.html  compare-5d-update.html  index.html  mockup-1.html  mockup-2.html  mockup-3.html  mockup-4.html  mockup-5-c.html  mockup-5-d-a.html  mockup-5-d-b.html  mockup-5-d.html  mockup-5.html  mockup-6.html
docs/: ARCHITECTURE.md  linebreak-explainer.html
docs/_preview/: update-flow.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  diaglog.rs  lib.rs  main.rs  models.rs  telemetry.rs  vault.rs
src/components/: ChangelogModal.tsx  EditorPane.tsx  FindBar.tsx  MarkdownEditor.tsx  MarkdownReadOnly.tsx  MilkdownEditor.tsx  SearchPanel.tsx  TabBar.tsx  ThemePicker.tsx  UpdateDebugPanel.tsx  UpdateNotice.tsx  UpdateProgressIndicator.tsx  _ChangelogPreview.tsx  code-block-enter-plugin.ts  (+5 more)
website/: index.html  script.js  styles.css
(+29 files in other folders)
