[package]
name = "penraft"
version = "0.3.0"
description = "Penraft desktop application"
authors = ["Penraft"]
edition = "2021"

[lib]
name = "penraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
hex = "0.4"
sha2 = "0.10"
tempfile = "3"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["time"] }
os_info = "3"
sys-locale = "0.3"
